@@ -1,13 +1,13 @@
 package com.github.espresso;
 
-import java.nio.file.StandardOpenOption;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
 import java.util.*;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 
 public class FILE {
 
+    // Base File
     private static class BaseFile{
         protected String filePath;
         public BaseFile(String filePath){
@@ -15,14 +15,75 @@ public class FILE {
         }
     }
 
+    // Static Utility Functions
+    public static boolean exists(String filePath){
+        return Files.exists(Paths.get(filePath));
+    }
+
+    public static void create(String filePath) throws IOException {
+        Path path = Paths.get(filePath);
+        if (Files.exists(path)) {
+            throw new FileAlreadyExistsException("File " + filePath + " already exists");
+        }
+        Files.createFile(path);
+    }
+
+    public static void delete(String filePath) throws IOException {
+        Path path = Paths.get(filePath);
+        boolean deleted = Files.deleteIfExists(path);
+        if (!deleted) {
+            throw new IOException("File does not exist: " + filePath);
+        }
+    }
+
+
+    // Read Function
     public static class Read extends BaseFile{
+
         public Read(String filePath){
             super(filePath);
         }
 
+        private int currentLine = 0;
+        private List<String> cachedLines = null;
+
+        private List<String> getLines() throws IOException {
+            if (cachedLines == null) {
+                cachedLines = Files.readAllLines(Paths.get(filePath), StandardCharsets.UTF_8);
+            }
+            return cachedLines;
+        }
+
         //It will return a list of all the lines present in the file
         public List<String> readAllLines() throws IOException {
-            return Files.readAllLines(Paths.get(filePath));
+            return getLines();
+        }
+
+        public void resetReader() {
+            currentLine = 0;
+            cachedLines = null;
+        }
+
+        public int currentLineNumber(){
+            return currentLine + 1;
+        }
+
+        public boolean hasNextLine() throws IOException {
+            return currentLine < getLines().size();
+        }
+
+        public String readLine(int n) throws IOException{
+            List<String> lines = getLines();
+            if (n < 1 || n > lines.size()) throw new IndexOutOfBoundsException("Line " + n + " does not exist.");
+            return lines.get(n - 1);
+        }
+
+        public String readLine() throws IOException {
+            List<String> lines = getLines();
+            if (currentLine >= lines.size()) {
+                throw new NoSuchElementException("End of file reached for: " + filePath);
+            }
+            return lines.get(currentLine++);
         }
     }
 
@@ -32,13 +93,18 @@ public class FILE {
         }
 
         public void append(String line) throws IOException {
+            Files.writeString(  Paths.get(filePath),
+                                line + System.lineSeparator(),
+                                StandardCharsets.UTF_8,
+                                StandardOpenOption.CREATE,              // Creates the File if it doesn't Exist
+                                StandardOpenOption.APPEND);             // Appends it to the end of the file
+        }
 
-            line = line + System.lineSeparator();
-
+        public void append(List<String> lines) throws IOException {
             Files.write(Paths.get(filePath),
-                        line.getBytes(),
-                        StandardOpenOption.CREATE,              // Creates the File if it doesn't Exist
-                        StandardOpenOption.APPEND);             // Appends it to the end of the file
+                        lines, StandardCharsets.UTF_8,
+                        StandardOpenOption.CREATE,
+                        StandardOpenOption.APPEND);
         }
     }
 
@@ -46,15 +112,20 @@ public class FILE {
         public Write(String filePath){
             super(filePath);
         }
-        public void write(String line) throws IOException {
-            line = line + System.lineSeparator();
 
-            Files.write(Paths.get(filePath),
-                        line.getBytes(),
-                        StandardOpenOption.CREATE,              // Creates the File if it doesn't Exist
-                        StandardOpenOption.TRUNCATE_EXISTING);  // Erases existing content and Overwrites
+        public void write(String line) throws IOException {
+            Files.writeString(  Paths.get(filePath),
+                                line + System.lineSeparator(),
+                                StandardCharsets.UTF_8,
+                                StandardOpenOption.CREATE,              // Creates the File if it doesn't Exist
+                                StandardOpenOption.TRUNCATE_EXISTING);  // Erases existing content and Overwrites
         }
 
-
+        public void write(List<String> lines) throws IOException {
+            Files.write(Paths.get(filePath),
+                        lines, StandardCharsets.UTF_8,
+                        StandardOpenOption.CREATE,
+                        StandardOpenOption.TRUNCATE_EXISTING);
+        }
     }
 }
